	* Fixed menu in opening report window (docked mode)
	* FEN pasting : reversed CLIPBOARD and PRIMARY (file edit.tcl)
	* Endgame tablebase window cleanup when closing (remove its tab)
	* Twin checker : loads the first pair of twin games (thanks to  J. Wesley Cleveland)  
	* when no book is found, handle this case correctly (Book window, serious game, ...)
- FICS : user interface improvements : 
	* click on a game to observe it
	* redesign in notebook style
	* better looking "offers" graph
	* used icons from http://webdesignledger.com/freebies/21-best-icon-sets-for-designing-web-apps
	* added a check box to enable standard user variables
- Correspondence Chess:
	* Add confirmation dialogue of CC moves. (Suggested by Dhanish)
	* Add copy cc games list to clipboard. (Suggested by Dhanish)
	* Add Ctrl-Up/Down scrolling through games. (Suggested by Dhanish)
	* Ctrl-F12 now also processes the inbox automatically. (Suggested by Dhanish)
	* Check if mainline is longer then the games mainline, eg. due to a users error (Suggested by Dhanish)
	* Disable engine analysis in games that do not allow it,  ie. Xfcc noEngines = true. If noEngines is not set assume "engines allowed" (ICCF). (Suggested by Austin)
	* Strip of text in [] when sending game comments
	* Show start date for individual challenges in tooltip
- Spell checker : enhanced user feedback, operation can be cancelled, all names corrected instead of the first 2000 (thanks to Joost Hart)
- Search 
	* Header: Allow to search for the special player !me which is mapped to all Playernames defined in Options / Chessboard / My Player names (can be combined with all other header search options as well as saved as search)
	* Header: Allow to search for the special player !mymove. Similar to !me but the player has to have the move at the end of the game.