@@ -6,8 +6,6 @@
 
 fignoler calvar
 
-Comment editor prend un CPU
-
  ===========================================================
 |                                                           |
 |                          BUGS                             |
