@@ -367,34 +367,26 @@ proc ::htext::display {w helptext {section ""} {fixed 1}} {
         # Check if it is a move tag:
         set moveTag $tagName
         set tagName "m"
-        $w tag bind $moveTag <ButtonRelease-1> \
-            "sc_move pgn [string range $moveTag 2 end]; updateBoard"
+        $w tag bind $moveTag <ButtonRelease-1> "sc_move pgn [string range $moveTag 2 end]; updateBoard"
         # invoking contextual menu in PGN window
-        $w tag bind $moveTag <ButtonPress-$::MB3> \
-            "sc_move pgn [string range $moveTag 2 end]; updateBoard"
-        $w tag bind $moveTag <Any-Enter> \
-            "$w tag configure $moveTag -underline 1
+        $w tag bind $moveTag <ButtonPress-$::MB3> "sc_move pgn [string range $moveTag 2 end]; updateBoard"
+        $w tag bind $moveTag <Any-Enter> "$w tag configure $moveTag -underline 1
         $w configure -cursor hand2"
-        $w tag bind $moveTag <Any-Leave> \
-            "$w tag configure $moveTag -underline 0
+        $w tag bind $moveTag <Any-Leave> "$w tag configure $moveTag -underline 0
         $w configure -cursor {}"
       } elseif {[strIsPrefix "c_" $tagName]} {
         # Check if it is a comment tag:
         set commentTag $tagName
         set tagName "c"
         if { $::::pgn::boldMainLine } {
-          $w tag configure $commentTag -foreground $::pgnColor(Comment) \
-              -font font_Regular
+          $w tag configure $commentTag -foreground $::pgnColor(Comment) -font font_Regular
         } else {
           $w tag configure $commentTag -foreground $::pgnColor(Comment)
         }
-        $w tag bind $commentTag <ButtonRelease-1> \
-            "sc_move pgn [string range $commentTag 2 end]; updateBoard; ::commenteditor::Open"
-        $w tag bind $commentTag <Any-Enter> \
-            "$w tag configure $commentTag -underline 1
+        $w tag bind $commentTag <ButtonRelease-1> "sc_move pgn [string range $commentTag 2 end]; updateBoard; ::commenteditor::Open"
+        $w tag bind $commentTag <Any-Enter> "$w tag configure $commentTag -underline 1
         $w configure -cursor hand2"
-        $w tag bind $commentTag <Any-Leave> \
-            "$w tag configure $commentTag -underline 0
+        $w tag bind $commentTag <Any-Leave> "$w tag configure $commentTag -underline 0
         $w configure -cursor {}"
       }
       
